# thereiwas

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose.yml
.github/workflows/: analyze.yml  analyze_backend.yml  analyze_frontend.yml  build.yml  build_and_publish_backend_container.yml  build_and_publish_container.yml  build_and_publish_frontend_container.yml  build_backend.yml  build_frontend.yml  build_server.yml
.run/: Run server in docker.run.xml  Run thereiwas.run.xml
migrations/2024-12-26-153304_create_location_table/: up.sql
migrations/2025-01-03-115932_alter_locations_make_report_trigger_not_nullle/: up.sql
migrations/2025-01-06-063146_add_wifi_access_points_table/: up.sql
migrations/2025-01-06-064845_create_locations_to_wifi_access_points_table/: up.sql
src/: lib.rs  main.rs  models.rs  routes.rs  schema.rs
src/routes/: owntracks.rs
thereiwas-backend/: .dockerignore  Cargo.toml  Dockerfile  curls.sh  docker-compose.yml  example.env  generate_token_signing_keys.sh  initial_test_data.sql
thereiwas-backend/.run/: Run server in docker.run.xml  Run thereiwas.run.xml
thereiwas-backend/migrations/2025-01-03-115932_alter_locations_make_report_trigger_not_nullle/: down.sql
thereiwas-backend/migrations/2025-01-06-063146_add_wifi_access_points_table/: down.sql  up.sql
thereiwas-backend/migrations/2025-01-06-064845_create_locations_to_wifi_access_points_table/: down.sql
thereiwas-backend/migrations/2025-01-08-104422_add_last_seen_column_to_wifi_aps_table/: down.sql  up.sql
thereiwas-backend/migrations/2025-01-09-091312_create_client_token_table/: down.sql  up.sql
thereiwas-backend/migrations/2025-01-14-083701_create_authorization_requests_table/: down.sql  up.sql
thereiwas-backend/migrations/2025-01-20-140616_change_topic_to_reporting_device_in_locations_table/: down.sql  up.sql
thereiwas-backend/migrations/2025-01-27-094930_change_authorization_requests_to_audit_log/: down.sql  up.sql
thereiwas-backend/migrations/2025-01-27-115433_create_authentication_tables/: down.sql  up.sql
thereiwas-backend/migrations/2025-03-04-131842_health_pingback_url/: down.sql  up.sql
thereiwas-backend/src/: fairings.rs  guards.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs
thereiwas-backend/src/routes/: guards.rs  owntracks.rs
thereiwas-frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
thereiwas-frontend/public/images/: background_login_dark.jpg.txt  background_login_light.jpg.txt
thereiwas-frontend/src/: api.ts  i18n.js  index.css  main.tsx
thereiwas-frontend/src/components/App/: index.tsx
thereiwas-frontend/src/components/RequireAuthentication/: index.tsx
thereiwas-frontend/src/hooks/useAuthentication/: index.tsx
thereiwas-frontend/src/provider/AuthenticationProvider/: index.tsx
thereiwas-frontend/src/views/AuthenticatedView/: index.tsx
thereiwas-frontend/src/views/DashboardView/: index.tsx
thereiwas-frontend/src/views/LoginView/: index.tsx
