[package]
name = "there-i-was"
version = "2024.12.25"
edition = "2021"
authors = ["Tim Janke <tim+github@janke.biz>"]
description = "Self-hosted, privacy-focused way to track and visualize your location history over the years"
license = "MIT"
readme = "README.md"
repository = "https://github.com/flying7eleven/there-i-was"
exclude = [".github/", ".gitignore"]
publish = false
rust-version = "1.81"

[dependencies.diesel]
version = "2.2.6"
default-features = false
features = ["postgres", "r2d2", "chrono"]