[package]
name = "thereiwas"
version = "2024.12.25"
edition = "2021"
authors = ["Tim Janke <tim+github@janke.biz>"]
description = "Self-hosted, privacy-focused way to track and visualize your location history over the years"
license = "MIT"
readme = "README.md"
repository = "https://github.com/flying7eleven/thereiwas"
exclude = [".github/", ".gitignore"]
publish = false
rust-version = "1.81"

[dependencies.chrono]
version = "0.4.39"
default-features = false
features = ["std"]

[dependencies.diesel]
version = "2.2.6"
default-features = false
features = ["postgres", "r2d2", "chrono"]

[dependencies.fern]
version = "0.7.1"
default-features = false

[dependencies.log]
version = "0.4.22"
default-features = false
features = ["std"]

[dependencies.rocket]
version = "0.5.1"
default-features = false
features = ["json"]