[package]
name = "thereiwas"
version = "2025.3.4"
edition = "2021"
authors = ["Tim Janke <tim+github@janke.biz>"]
description = "Self-hosted, privacy-focused way to track and visualize your location history over the years"
license = "MIT"
readme = "README.md"
repository = "https://github.com/flying7eleven/thereiwas"
exclude = [".github/", ".gitignore"]
publish = false
rust-version = "1.81"

[dependencies.bcrypt]
version = "0.17.0"
default-features = false
features = ["std"]

[dependencies.chrono]
version = "0.4.40"
default-features = false
features = ["std"]

[dependencies.diesel]
version = "2.2.8"
default-features = false
features = ["postgres", "r2d2", "chrono"]

[dependencies.diesel_migrations]
version = "2.2.0"
default-features = false

[dependencies.dotenv]
version = "0.15.0"
default-features = false

[dependencies.fern]
version = "0.7.1"
default-features = false

[dependencies.jsonwebtoken]
version = "9.3.1"
default-features = false
features = ["use_pem"]

[dependencies.lazy_static]
version = "1.5.0"
default-features = false

[dependencies.log]
version = "0.4.26"
default-features = false
features = ["std"]

[dependencies.r2d2]
version = "0.8.10"
default-features = false

[dependencies.reqwest]
version = "0.12.12"
default-features = false
features = ["native-tls", "blocking"]

[dependencies.rocket]
version = "0.5.1"
default-features = false
features = ["json"]

[dependencies.serde]
version = "1.0.218"
default-features = false
features = ["std"]

[dependencies.serde_json]
version = "1.0.140"
default-features = false
features = ["std"]
