[package]
name = "thereiwas"
version = "2025.3.18"
edition = "2021"
authors = ["Tim Janke <tim+github@janke.biz>"]
description = "Self-hosted, privacy-focused way to track and visualize your location history over the years"
license = "MIT"
readme = "README.md"
repository = "https://github.com/flying7eleven/thereiwas"
exclude = [".github/", ".gitignore"]
publish = false
rust-version = "1.81"

[profile.release]
codegen-units = 1           # reduces binary size by ~2%
debug = "full"              # No one needs an undebuggable release binary
lto = true                  # reduces binary size by ~14%
opt-level = "s"             # reduces binary size by ~25%
panic = "abort"             # reduces binary size by ~50% in combination with -Zbuild-std-features=panic_immediate_abort
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"           # See split-debuginfo - allows us to drop the size by ~65%
incremental = true          # Improves re-compile times

[profile.bench]
codegen-units = 16          # Make compiling criterion faster (16 is the default, but profile.release sets it to 1)
lto = "thin"                # Similarly, speed up linking by a ton

[dependencies.bcrypt]
version = "0.17.0"
default-features = false
features = ["std"]

[dependencies.chrono]
version = "0.4.41"
default-features = false
features = ["std"]

[dependencies.diesel]
version = "2.2.12"
default-features = false
features = ["postgres", "r2d2", "chrono"]

[dependencies.diesel_migrations]
version = "2.2.0"
default-features = false

[dependencies.dotenv]
version = "0.15.0"
default-features = false

[dependencies.fern]
version = "0.7.1"
default-features = false

[dependencies.jsonwebtoken]
version = "9.3.1"
default-features = false
features = ["use_pem"]

[dependencies.lazy_static]
version = "1.5.0"
default-features = false

[dependencies.log]
version = "0.4.27"
default-features = false
features = ["std"]

[dependencies.r2d2]
version = "0.8.10"
default-features = false

[dependencies.reqwest]
version = "0.12.22"
default-features = false
features = ["native-tls", "blocking"]

[dependencies.rocket]
version = "0.5.1"
default-features = false
features = ["json"]

[dependencies.serde]
version = "1.0.219"
default-features = false
features = ["std"]

[dependencies.serde_json]
version = "1.0.142"
default-features = false
features = ["std"]
